<?xml version="1.0"?>
<package format="2">
  <name>parameter_pa</name>
  <version>1.0.0</version>
  <description>ProAut parameter package</description>

  <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>


  <doc_depend>doxygen</doc_depend>

</package>
